feat(crawler): 预置财经分类体系，AI 打标支持受控新建分类
- 新增 CategorySeeder：启动时幂等补种 15 个预置财经分类（新库走 init.sql 种子，清单保持一致）
- AiTaggingService：优先从库中已有分类逐字选择；确实无合适分类时允许 2~8 字
  格式合规的新分类名受控新建；库为空时回退预置清单，避免整体放弃打标
- 来源默认分类更名对齐预置体系：国际财经→全球市场、财经→综合财经、股票→A股